<resources>
    <string name="app_name">Barcode Battler</string>

    <!-- Main Activity -->
    <string name="toNetWorkBattle">Join network battle</string>


    <!-- Creature Generator & Pool Strings -->
    <string name="label_generator">Barcode: </string>
    <string name="button_generator">Generer une créature (manuellement)</string>
    <string name="button_toPool">Voir les créatures</string>
    <string name="button_toBattle">Battle</string>

    <string name="label_creature">Creature:</string>
    <string name="label_energy">HP:</string>
    <string name="label_strike">ST:</string>
    <string name="label_defence">DF:</string>
    <string name="game_element_default">\???</string>

    <!-- Creature Pool Strings -->
    <string name="add_creature">Ajouter une créature</string>

    <!-- Battle Activity -->
    <string name="label_p1">- PLAYER 1 -</string>
    <string name="label_p2">- PLAYER 2 -</string>
    <string name="label_opponent">- OPPONENT -</string>
    <string name="label_equipment">- EQUIPMENT -</string>
    <string name="action_attack">Attack</string>
    <string name="action_use">Use item</string>
    <string name="msg_damage">%1$s attack caused %2$d damages...</string>
    <string name="msg_turn">* %1$s TURN *</string>
    <string name="msg_equipement">You used %1$s on %2$s...</string>
    <string name="msg_death">Monster %1$s HP reached 0... </string>
    <string name="msg_lose">You lose !</string>
    <string name="msg_win">%1$s\'s monster died ! It\'s %2$s\'s WIN !</string>
    <string name="msg_battle_winner">%1$s WIN THE BATTLE</string>
    <string name="msg_summon">You have lost your creature, another monster is summoned</string>
    <string name="msg_s">New Creature summoned</string>
    <string name="msg_empty_battlefield">Pas de combat en cours, veuillez sélectionner un monstre dans la liste pour commencer le combat</string>


    <string name="btn_turn">Attack !</string>
    <string name="btn_your_turn">Your Turn</string>
    <string name="btn_end_turn">End Turn</string>
    <string name="btn_summon_next">Summon next creature</string>
    <string name="btn_start">Start battle !</string>
    <string name="btn_quit">Quit</string>
    <!-- Superhero Activity -->
    <string name="add_to_battle">Combattre</string>
    <string name="add_to_network_battle">Combattre en réseau</string>


</resources>