<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.mbds.barcodebattler.MainActivity">

    <Button
        android:id="@+id/generate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/button_generator"/>

    <Button
        android:id="@+id/toPool"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/button_toPool" />

    <Button
        android:id="@+id/toBattle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/button_toBattle" />

</LinearLayout>
