<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/etudiant_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/game_element_default"
        android:weightSum="1" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="120dp"
        android:layout_height="115dp"
        android:layout_gravity="start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/icon"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/label_energy" />

            <TextView
                android:id="@+id/energy"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.9"
                android:gravity="center"
                android:text="@string/game_element_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/label_strike" />

            <TextView
                android:id="@+id/strike"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.9"
                android:gravity="center"
                android:text="@string/game_element_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/label_defence" />

            <TextView
                android:id="@+id/defense"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.9"
                android:gravity="center"
                android:text="@string/game_element_default" />
        </LinearLayout>

        <Button
            android:id="@+id/addToBattle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/add_to_battle" />

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@android:color/darker_gray" />-->

    </LinearLayout>

</RelativeLayout>
