<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/etudiant_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/label_creature"
        android:weightSum="1" />

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/game_element_default"
        android:weightSum="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/label_energy" />

            <TextView
                android:id="@+id/energy"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.9"
                android:gravity="center"
                android:text="@string/game_element_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/label_strike" />

            <TextView
                android:id="@+id/strike"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.9"
                android:gravity="center"
                android:text="@string/game_element_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/label_defence" />

            <TextView
                android:id="@+id/defense"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.9"
                android:gravity="center"
                android:text="@string/game_element_default" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

</LinearLayout>
