<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.mbds.barcodebattler.battle.BattleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_weight="0.8"
            >

            <!-- 1rst ROW : 1rst Player -->

            <!-- Player 1 Monster stats -->

            <LinearLayout
                android:id="@+id/P1Stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_column="1"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"

                android:background="@drawable/border_p1">

                <TextView
                    android:id="@+id/InfoP1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_p1"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:textStyle="bold"/>


                <TextView
                    android:id="@+id/monsterInfoP1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_creature"
                    android:textAlignment="center"
                    android:textSize="10dp"/>

                <!-- HP -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/HPcolorLabel"
                        android:text="@string/label_energy"
                        android:textAlignment="center"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/P1MonsterHP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/HPcolorLabel" />

                </LinearLayout>

                <!-- ST -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/STcolorLabel"
                        android:text="@string/label_strike"
                        android:textAlignment="center"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/P1monsterST"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/STcolorLabel"
                        android:layout_weight="1"/>

                </LinearLayout>

                <!-- DF -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/DFcolorLabel"
                        android:text="@string/label_defence"
                        android:textAlignment="center"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/P1monsterDF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/DFcolorLabel"
                        android:layout_weight="1"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_equipment"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:textStyle="bold"/>


            </LinearLayout>

            <!-- PLAYER MONSTER IMAGE -->

            <LinearLayout
                android:id="@+id/P1Image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:weightSum="1"
                >

                <TextView
                    android:id="@+id/monsterNameP1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Monster 1"
                    android:textAlignment="center"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:layout_weight="0.2"/>

                <ImageView
                    android:id="@+id/monsterImageP1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    app:srcCompat="@android:drawable/sym_def_app_icon"
                    android:layout_weight="0.8"/>

            </LinearLayout>



            <!-- 2nd ROW : 2nd Player -->

            <!-- Player 2 Monster stats -->

            <LinearLayout
                android:id="@+id/P2Stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_column="0"
                android:layout_row="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"

                android:background="@drawable/border_p2">

                <TextView
                    android:id="@+id/InfoP2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_p2"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:textStyle="bold"/>


                <TextView
                    android:id="@+id/monsterInfoP2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_creature"
                    android:textAlignment="center"
                    android:textSize="10dp"/>

                <!-- HP -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/HPcolorLabel"
                        android:text="@string/label_energy"
                        android:textAlignment="center"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/P2MonsterHP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/HPcolorLabel"
                        />

                </LinearLayout>

                <!-- ST -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/STcolorLabel"
                        android:text="@string/label_strike"
                        android:textAlignment="center"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/P2monsterST"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/STcolorLabel"
                        android:layout_weight="1"/>

                </LinearLayout>

                <!-- DF -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/DFcolorLabel"
                        android:text="@string/label_defence"
                        android:textAlignment="center"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/P2monsterDF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/DFcolorLabel"
                        android:layout_weight="1"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_equipment"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <!-- PLAYER MONSTER IMAGE -->

            <LinearLayout
                android:id="@+id/P2Image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_rowWeight="1"

                android:weightSum="1"
                >

                <TextView
                    android:id="@+id/monsterNameP2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Monster 2"
                    android:textAlignment="center"
                    android:textSize="10dp"
                    android:textStyle="italic"
                    android:layout_weight="0.2"/>

                <ImageView
                    android:id="@+id/monsterImageP2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="2"
                    app:srcCompat="@android:drawable/sym_def_app_icon"
                    android:layout_weight="0.8"/>

            </LinearLayout>

        </GridLayout>

        <!-- Game message -->

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        >

            <TextView
                android:id="@+id/game_msg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Message du jeu ici"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="0.2"
                android:gravity="center_vertical"/>

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
